// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "safeAddressRange": {
          "byteAddress": 0,
          "memoryId": "counter",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "add",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
]
`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32 i32 i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 4
          i32.const 3
          local.set 2
          local.set 1
          local.get 1
          memory.size
          i32.const 1
          i32.sub
          i32.const 16
          i32.shl
          i32.const 65532
          i32.add
          i32.le_u
          if  ;; label = @4
            local.get 1
            local.get 2
            i32.store
          end
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`infinite loop protection > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "equal",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "branchIfTrue",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "safeAddressRange": {
          "byteAddress": 0,
          "memoryId": "counter",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "counter",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [],
    "instruction": "add",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 14,
    "lineNumberBeforeMacroExpansion": 14,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 16,
    "lineNumberBeforeMacroExpansion": 16,
  },
]
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32 i32 i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 4
          i32.const 3
          local.set 2
          local.set 1
          local.get 1
          memory.size
          i32.const 1
          i32.sub
          i32.const 16
          i32.shl
          i32.const 65532
          i32.add
          i32.le_u
          if  ;; label = @4
            local.get 1
            local.get 2
            i32.store
          end
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.load
        i32.const 10
        i32.eq
        br_if 1 (;@1;)
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`loop > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;
